--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="index.css">
   </head>
 <body>
-  <h1>Bubble Chase</h1>
+    <h1>Bubble Chase
+    </h1>
     <div>
       <progress value='100' max='100'></progress>
     </div>
